# agent-hub-python

./: .dockerignore  .env.example  Dockerfile  GIT_REPO_SYNC.md  README.md  main.py  pyproject.toml  requirements.txt  test_api.http  test_image_analysis.http
.github/: AZURE_DEPLOYMENT_SETUP.md  azure-setup-commands.sh
.github/workflows/: build-and-push.yml
agents/: README.md  chat_agent.py
api/: __init__.py  main.py
api/agents/: README.md  __init__.py  agent_utils.py  chat_agent.py  image_analysis_agent.py
api/agents/prompts/: image_analysis_system_prompt.txt
api/models/: api_models.py
api/routes/: agents.py  default.py
api/utils/: file_utils.py
models/: api_models.py
