[project]
name = "agent-hub-python"
version = "0.1.0"
description = "FastAPI application with status endpoint"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "azure-ai-projects>=1.0.0b12",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "semantic-kernel>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
include = [
    "main.py",
    "run.py", 
    "test_main.py",
    "api/__init__.py",
    "api/main.py",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
